@@ -1,3 +1,8 @@
+2007-02-27  David Wilder <dwilder@us.ibm.com>
+
+	* loc2c-runtime.h: Added defines for EX_TABLE needed by older
+	s390 kernels that do not already have it defined.
+
 2007-02-07  Martin Hunt  <hunt@redhat.com>
 
 	* stack-ppc64.c (__stp_stack_print): Remove an old
